ultimos cambios de compatibilidad